fix workaround to remove whitespaces from inline-block, begin to write keydown event to move pacmane

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 
 body {
   background-color: #111;
+  margin: 0;
+}
+
+#container {
+  position: relative;
+  font-size: 0; /* quick fix to remove inline-block whitespace */
 }
 
 .row div {
@@ -23,9 +29,16 @@ body {
   background-color: #000;
 }
 
-.pacman {
+#pacman {
   background-image: url('pacman.gif');
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
+
+  width: 20px;
+  height: 20px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
 }
